<resources>
    <string name="sync_account_type" translatable="false">freehands.usefulservices.com</string>
    <string name="content_authority" translatable="false">com.usefulservices.freehands</string>

    <string name="app_name">Free Hands</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="logout">Sign out</string>
    <string name="carrier">Carrier</string>
    <string name="customer">Customer</string>
    <string name="profile">Profile</string>
    <string name="login_label">Login ...</string>
    <string name="device_not_supported_message">This device is not supported.</string>
    <string name="error_access_message">Cannot get access to server</string>
    <string name="no_internet_connection_label">Connection to the internet is not available now, try sign in to system later.</string>
    <string name="signin_label">Chose sign in method</string>
    <string name="title_activity_login">Sign in</string>

</resources>
