<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_carrier"
            android:icon="@drawable/ic_local_shipping_black_24dp"
            android:title="@string/carrier" />
        <item
            android:id="@+id/nav_customer"
            android:icon="@drawable/ic_directions_run_black_24dp"
            android:title="@string/customer" />
    </group>

    <item android:title="">
        <menu>

            <item
                android:id="@+id/nav_profile"
                android:icon="@drawable/ic_person_black_24dp"
                android:title="@string/profile" />

            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_settings_black_24dp"
                android:title="@string/action_settings" />
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_exit_to_app_black_24dp"
                android:title="@string/logout" />
        </menu>
    </item>

</menu>
